# scrape-easteregg-telegram-notifier

./: .gitignore  main.py  notifier.py  pyproject.toml  scanner.py
